# mod-list-creator

./: Cargo.toml
src/: hash.rs  main.rs
